--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -26,24 +26,10 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('einsaetze_liste') }}">
+                        <a class="nav-link" href="{{ url_for('jobs.jobs') }}">
                             <i class="bi bi-list-ul"></i> Einsätze
                         </a>
                     </li>
-                    {% if user.rolle == 'wegewart' %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('einsatz_neu') }}">
-                            <i class="bi bi-plus-circle"></i> Neuer Einsatz
-                        </a>
-                    </li>
-                    {% endif %}
-                    {% if user.rolle in ['ortsvorsteher', 'admin', 'verwaltung'] %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('einsaetze_freigeben') }}">
-                            <i class="bi bi-clipboard-check"></i> Freigeben
-                        </a>
-                    </li>
-                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('maschinen_liste') }}">
                             <i class="bi bi-truck"></i> Maschinen
@@ -90,7 +76,7 @@
     </div>
 
     <footer class="text-center text-muted py-4 mt-5">
-        <small>Wegewart-Abrechnungssystem © 2024</small>
+        <small>Wegewart-Abrechnungssystem © Jonas Müller 2024</small>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
