--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('maschinen_liste') }}">
+                        <a class="nav-link" href="{{ url_for('machines.machines') }}">
                             <i class="bi bi-truck"></i> Maschinen
                         </a>
                     </li>
